@@ -1010,3 +1010,12 @@ you're used to ratpoison's rc file and you just want to run
 commands or don't know lisp very well."
   (loop for i in commands do
        (interactive-command i (current-screen))))
+
+(define-stumpwm-command "snext" ()
+  (switch-to-screen (next-screen)))
+
+(define-stumpwm-command "sprev" ()
+  (switch-to-screen (next-screen (reverse *screen-list*))))
+
+(define-stumpwm-command "sother" ()
+  (switch-to-screen (cadr *screen-list*)))
